
2011-01-12  Steffen Kamper  <steffen@typo3.org>

	* Fixed issue #16986: Grid wizard miss tooltips and localization

2011-01-12  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #16985: Rename Sysfolder to Folder
	* Follow-up to #16857: Changed label "Include Subpages" to "Extend to Subpages"
	* Reverted changes in CSH where SysFolder was renamed to to Folder - will be re-added with updated CSH

2011-01-12  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.3.0beta4

2011-01-12  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16982: be_layout and be_layout_next_level got misleading labels and no CSH (Thanks to Jo Hasenau)

2011-01-12  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16939: ExtJS Tooltip / CSH styling
	* Fixed bug #16977: show_item shows wrong icon for files (Thanks to Georg Ringer)

2011-01-12  Benjamin Mack  <benjamin.mack@typo3.org>

	* Synchronized external repositories of version (tag 4.5.0beta4) and workspaces (tag 4.5.0beta4)

2011-01-12  Oliver Hader  <oliver.hader@typo3.org>

	* Cleanup: Fixed last synchronized targets of external SVN repositories

2011-01-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of changeset 9949: Fixed typo in class name

2011-01-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16970: Backwards compatibility in PHP_SCRIPT and accessing $this-> methods
	* Fixed bug #16966: be_layout setting "none" is not working and be_layout should not be inherited automatically (Thanks to Jo Hasenau)
	* Added feature #13319: Add plupload support for uploading files in fileadmin

2011-01-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16941: Change mask color

2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16967: [Caching framework] Remove not exising "GlobalsBackend" from config_default.php

2011-01-11  Ernesto Baschny  <ernst@cron-it.de>
