@@ -11,6 +11,7 @@
 	* Fixed issue #16985: Rename Sysfolder to Folder
 	* Follow-up to #16857: Changed label "Include Subpages" to "Extend to Subpages"
 	* Reverted changes in CSH where SysFolder was renamed to to Folder - will be re-added with updated CSH
+	* Reverted page type label from Folder to SysFolder as it affected old versions, introduced a new label "Folder" for versions 4.5+
 
 2011-01-12  Sebastian Kurfuerst  <sebastian@typo3.org>
 
